<resources>
    <string name="app_name">Coin Stalker</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Yükleniyor</string>
    <string name="paralar">Paralar</string>
    <string name="cevirici">Çevirici</string>
    <string name="coinname">CoinName</string>
    <string name="dummyValue">82132813</string>
    <string name="hacim">Hacim</string>
    <string name="en_yks">En Yks.</string>
    <string name="piyasa_degeri">Piyasa Değeri</string>
    <string name="degisim">Değişim</string>
    <string name="connection_failed">Oops.. İnternet bağlantısı bulunamadı..</string>
    <string name="tekrar_dene">Tekrar Dene</string>
    <string name="background">Background</string>
    <string name="siralama">Sıralama</string>
    <string name="blank">…</string>
    <string name="suan">Şu an</string>
    <string name="piyasadakiPara">İşlem gören miktar</string>
    <string name="toplamPara">Toplam miktar</string>
    <string name="yorumGonder">Yorum gönder</string>
    <string name="mesajGonder">Lütfen bir mesaj giriniz.</string>
    <string name="yorumyok">Daha önce hiç yorum yapılmamış.</string>
    <string name="yorumlar">Yorumlar</string>
    <string name="filtrele">Filtrele</string>
    <string name="info">Bilgi</string>
    <string name="karsilastir">Karşılaştır</string>
    <string name="close">Kapat</string>
    <string name="chooseMoneytype">Lütfen ana para birimini seçiniz.</string>
    <string name="sortType">Lütfen sıralama türünü seçiniz.</string>
    <string name="timePeriod">Lütfen zaman periyodu seçiniz.</string>
    <string name="onayla">ONAYLA</string>
    <string name="tamam">Tamam</string>
    <string name="deger">Değer</string>
    <string name="gunluk">Günlük</string>
    <string name="haftalik">Haftalık</string>
    <string name="aylik">Aylık</string>
    <string name="coinranking">CoinRanking</string>
    <string name="data_provider">İçerik sağlayıcı taraf</string>
</resources>
